CSS fix for wrapping titles. And enable tag cloud.

--- a/disc/css/discovery.css
+++ b/disc/css/discovery.css
@@ -266,6 +266,7 @@ h6 {
 	color:#3a3a3c;
 	font-weight:bold;
 	margin-bottom:1px;
+	height: 30px;
 }
 .resultViews{
 	font-size:9px;
